# bkgames

./: .coveragerc  .gitignore  README.md  __main__.py  bkgames.py  config.json  pyproject.toml  setup.py
bkgames/: __main__.py  app.py  config.json  logging.ini  root_path.py
bkgames/configuration/: __init__.py  config.py  config_file_reader.py  configuration.py  custom_paths.py  data_finder.py  initializer.py
bkgames/dataenhancers/: __init__.py  not_yet_played_enhancer.py  skip_teams_enhancer.py
bkgames/decorators/: __init__.py  singleton.py
bkgames/games_history/: __init__.py  games_history.py  games_history_operations.py
bkgames/gameshistory/: __init__.py  games_history.py  games_history_operations.py
bkgames/helpers/: __init__.py  game_helper.py
bkgames/models/: __init__.py  game_date.py  team_model.py
bkgames/parsers/: __init__.py  file_parser.py  team_frequency_parser.py  teams_validator.py  valid_team_parser.py
bkgames/planners/: __init__.py  past_only_planner.py
bkgames/printers/: __init__.py  not_parsed_lines_printer.py  teams_to_watch_printer.py
bkgames/reader/: __init__.py  autofinder.py  configuration.py  (+4 more)
source/: bkgames.decorators.rst  bkgames.gameshistory.rst  bkgames.helpers.rst  bkgames.parsers.rst  bkgames.printers.rst  bkgames.reader.rst  bkgames.rst  conf.py  index.rst  modules.rst
tests/: data_creator.py  data_creator_action.py  test_configuration.py  test_file_parser.py  test_game_helper.py  test_games_history.py  test_games_history_operations.py  test_reader.py  test_team_frequency_parser.py  test_valid_team_parser.py
(+52 files in other folders)
