[tool.poetry]
name = "bkgames"
version = "0.1.0"
description = "Finding games to watch"
authors = ["michal_urbanski <michal_urbanski@windowslive.com>"]
readme = "README.md"
packages = [{include = "bkgames"}]

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.10.5"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
coverage = "^7.3.2"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
